--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.828.0",
+    "@aws-sdk/s3-request-presigner": "^3.828.0",
     "@clerk/nextjs": "^6.21.0",
     "@prisma/client": "^6.9.0",
     "@radix-ui/react-dropdown-menu": "^2.1.12",
